Closed Bug 1687306 Opened 5 years ago Closed 5 years ago

TypedArrayObject::set_impl should call TypedArrayObject::convertForSideEffect instead of ToNumber

Categories

(Core :: JavaScript: Standard Library, defect)

defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox86 --- fixed

People

(Reporter: anba, Assigned: anba)

Details

Attachments

(1 file)

TypedArrayObject::set_impl should call TypedArrayObject::convertForSideEffect instead of ToNumber to match https://tc39.es/ecma262/#sec-settypedarrayfromarraylike, steps 16.c-d:

...
c. If target.[[ContentType]] is BigInt, set value to ? ToBigInt(value).
d. Otherwise, set value to ? ToNumber(value).
...

Pushed by ncsoregi@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8abad145119a Call TypedArrayObject::convertForSideEffect() in TypedArray.prototype.set with a detached ArrayBuffer. r=mgaudet
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: